--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
             </div>
 
             <div class="chart-card">
+                <h5>Vis 2: Market Spiral Trajectory</h5>
+                    <p class="text-muted small">Watch how GME migrates between Euphoria and Panic zones over time.</p>
+                    <iframe src="vis2_market_spiral_perfect.html" 
+                            style="width: 100%; height: 650px; border: none; border-radius: 4px;">
+                    </iframe>
+            </div>
+
+            <div class="chart-card">
                 <h5>Vis 3: Sentiment Flow (High Contrast)</h5>
                 <div id="vis3-main" style="height: 300px;"></div>
                 <div class="d-flex justify-content-center gap-3 mt-2 small fw-bold">
@@ -79,6 +87,14 @@
                     <span><i style="background:#ff9f1c; width:12px; height:12px; display:inline-block;"></i> Fear</span>
                     <span><i style="background:#d63031; width:12px; height:12px; display:inline-block;"></i> Anger</span>
                 </div>
+            </div>
+
+            <div class="chart-card">
+                <h5>Vis 4: Multi-dimensional Risk Correlation</h5>
+                <p class="text-muted small">Interactive matrix exploring the inner-links between Reddit attention and market volatility.</p>
+                <iframe src="vis4_splom_final.html" 
+                        style="width: 100%; height: 900px; border: none; border-radius: 4px;">
+                </iframe>
             </div>
 
             <div class="chart-card">
