feat: add Vis 6 Risk Fingerprint with dynamic volatility slider, custom high-contrast colors, and auto-scaling

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
                 </div>
                 <div id="vis5" style="height: 300px;"></div>
             </div>
+
+            <div class="chart-card">
+                <h5>Vis 6: Daily Risk Fingerprint</h5>
+                <p class="text-muted small">Daily sentiment footprint. Slide back the timeline to filter out explosive days and reveal hidden normal trends.</p>
+                <iframe src="vis6_fingerprint.html" 
+                        style="width: 100%; height: 650px; border: none; border-radius: 4px;">
+                </iframe>
+            </div>
+            
         </div>
 
         <div class="col-lg-4">
